--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -31,6 +31,12 @@
                 <li>
                   <%= link_to 'マイページ', user_path(current_user) %>
                 </li>
+                <li>
+                  <%= link_to new_item_path do %>
+                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                    アイテムを追加
+                  <% end %>
+                </li>
                 <li role="separator" class="divider"></li>
                 <li>
                   <li>
