--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -38,6 +38,9 @@
           Haveしたユーザ
         </div>
         <div class="panel-body">
+          <% @have_users.each do |user| %>   
+            <%= link_to user.name, user_path(user) %>
+          <% end %>
         </div>
       </div>
     </div>
