--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,10 @@
                   アイテムを追加
               <% end %>
             </li>
+            <ul class="dropdown-menu">
+                <li><%= link_to 'Wantランキング', rankings_want_path %></li>
+              </ul>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="gravatar">
