--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,7 @@
             </li>
             <ul class="dropdown-menu">
                 <li><%= link_to 'Wantランキング', rankings_want_path %></li>
+                <li><%= link_to 'Haveランキング', rankings_want_path %></li>
               </ul>
             </li>
             <li class="dropdown">
